# scantailor

./: Application.cpp  BasicImageView.cpp  CMakeLists.txt  CommandLine.cpp  ConsoleBatch.cpp  ErrorWidget.cpp  FixDpiDialog.cpp  ImageViewBase.cpp  ImageViewBase.h  LoadFileTask.cpp  MainWindow.cpp  NewOpenProjectPanel.cpp  OutOfMemoryDialog.cpp  OutOfMemoryHandler.cpp  PageId.cpp  ProjectCreationContext.cpp  ProjectFilesDialog.cpp  ProjectOpeningContext.cpp  ProjectPages.cpp  ProjectReader.h  ProjectWriter.cpp  README.md  RelinkablePath.cpp  RelinkablePathVisualization.cpp  RelinkingDialog.cpp  RelinkingModel.cpp  SettingsDialog.cpp  SmartFilenameOrdering.cpp  SmartFilenameOrdering.h  StageListView.cpp  SystemLoadWidget.cpp  TabbedDebugImages.cpp  ThumbnailBase.cpp  ThumbnailPixmapCache.cpp  ThumbnailSequence.cpp  Utils.cpp  WorkerThread.cpp  XmlMarshaller.h
crash_reporter/: CMakeLists.txt  CrashReportDialog.cpp
dewarping/: CMakeLists.txt  Curve.cpp  Curve.h  CylindricalSurfaceDewarper.cpp  DetectVertContentBounds.cpp  DistortionModel.cpp  DistortionModel.h  DistortionModelBuilder.cpp  TextLineRefiner.cpp  TextLineTracer.cpp
filters/deskew/: ApplyDialog.cpp  CMakeLists.txt  ImageView.cpp  OptionsWidget.cpp
filters/fix_orientation/: ApplyDialog.cpp  CMakeLists.txt  ImageView.cpp  OptionsWidget.cpp
filters/output/: ApplyColorsDialog.cpp  CMakeLists.txt  ChangeDewarpingDialog.cpp  ChangeDpiDialog.cpp  DespeckleView.cpp  DewarpingView.cpp  FillZoneEditor.cpp  ImageView.cpp  OptionsWidget.cpp  OutputFileParams.cpp  OutputGenerator.cpp  PictureZoneEditor.cpp  PictureZonePropDialog.cpp  TabbedImageView.cpp  Task.cpp
filters/page_layout/: Alignment.cpp  ApplyDialog.cpp  CMakeLists.txt  Filter.cpp  ImageView.cpp  OptionsWidget.cpp  Params.cpp
filters/page_split/: CMakeLists.txt  ImageView.cpp  OptionsWidget.cpp  PageLayout.cpp  SplitModeDialog.cpp
filters/select_content/: ApplyDialog.cpp  CMakeLists.txt  Dependencies.cpp  Filter.cpp  ImageView.cpp  OptionsWidget.cpp  Params.cpp
foundation/: CMakeLists.txt  Property.h  PropertyFactory.cpp  PropertySet.h  Proximity.cpp  QtSignalForwarder.cpp  VecNT.h
imageproc/: BinaryImage.cpp  CMakeLists.txt  ColorInterpolation.cpp
imageproc/tests/: CMakeLists.txt
interaction/: CMakeLists.txt  DragHandler.cpp  ZoomHandler.cpp
math/: CMakeLists.txt  PolylineIntersector.cpp
tests/: CMakeLists.txt  TestSmartFilenameOrdering.cpp
zones/: CMakeLists.txt  EditableZoneSet.cpp  ZoneContextMenuInteraction.cpp
